<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeightSmall">

    <TextView
        android:id="@+id/map"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|start"
        android:paddingStart="5dp"
        android:text="@string/map_Name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Date"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/winLoss"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/WinLoss"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Edit"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</LinearLayout>