<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:text="@string/Date"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/dateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/mapTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:text="@string/Map"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/mapSpinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        tools:text="@string/Map" />

    <Spinner
        android:id="@+id/mapSpinner"
        android:layout_width="206dp"
        android:layout_height="31dp"
        android:entries="@array/map_array"
        android:gravity="bottom|center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />


    <TextView
        android:id="@+id/attackingOpsTextView"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:text="@string/Offensive_Operators"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/attackingOpsSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapTextView" />

    <Spinner
        android:id="@+id/attackingOpsSpinner"
        android:layout_width="206dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapSpinner" />


    <TextView
        android:id="@+id/defOpsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingStart="5dp"
        android:text="@string/Defensive_Operators"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/defendingOpsSpinner"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackingOpsTextView" />

    <Spinner
        android:id="@+id/defendingOpsSpinner"
        android:layout_width="213dp"
        android:layout_height="30dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackingOpsSpinner" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentEditText" />

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="@android:color/darker_gray"
        android:contentDescription="Comments"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/Comments"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defendingOpsSpinner" />

    <EditText
        android:id="@+id/scoreEditText"
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Game Score"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/commentEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defOpsTextView"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/WinLossRadioGroup"
        android:layout_width="169dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreEditText"
        app:layout_constraintTop_toBottomOf="@+id/defendingOpsSpinner">

        <RadioButton
            android:id="@+id/lossRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Loss" />

        <RadioButton
            android:id="@+id/winRadioButton"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Win" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>